--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         </div>
         <div class="link-contact">
-            <a href="https://www.tiktok.com/@candymind1?_t=8bZdppbnuEL&_r=1" class="link ig">
+            <a href="https://instagram.com/tam_923?igshid=YmMyMTA2M2Y=" class="link ig">
                 <i class="fa-brands fa-instagram"></i>
                 Instagram
             </a>
